# toad

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.asciidoc  README.md  conanfile.txt
.cicd/: sonar-project.properties  supervisord.conf
.cicd/docker/: Dockerfile  hosts.yaml  playbook.ansible.yaml
.cicd/docker/scripts/: install-cmake.sh  install-sonar_scanner.sh
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/workflows/: codeql.yml
2022.10.11/: notatki.md
app/: main.cc
cmake/: enable_benchmarks.cmake  enable_code_coverage.cmake  enable_docs.cmake  enable_examples.cmake  enable_tests.cmake  gcc_flags.cmake  use_clang_tidy.cmake  use_sanitizer.cmake
cmake/fetch_content/: c-questdb-client.cmake
cmake/logger/: Logger.cc.in  Logger.hh.in  add_logger.cmake
configuration/: readme.asciidoc
configuration/private/template/: collector.properties  database.properties
configuration/public/database/: changelog
configuration/public/database/schema/: init.sql
docs/: architecture_decision_record.md
docs/architecture_decision_record/: adr_001-data_series_database.md
docs/git_flow/: branch_naming_conventions.md
scripts/: as.sh  check_formatted.sh  clang_tidy.sh  format.sh  format_all.sh  format_cmake.sh  format_code.sh
scripts/format/: check_formatted.sh  clang_tidy.sh  format_cmake.sh  format_code.sh  remove_whitespace.sh
scripts/mock/: mcu_mock.py  messages.py
services/: CMakeLists.txt
services/collector/: CMakeLists.txt
services/collector/doc/: component_diagram.plantuml
services/collector/src/: CMakeLists.txt  Collector.cc
services/collector/tests/unit_tests/: CMakeLists.txt
services/oam/: CMakeLists.txt
services/oam/src/: CMakeLists.txt  OAM.cc
services/relay/: CMakeLists.txt
services/relay/src/: CMakeLists.txt  Message.hh  Relay.cc  Zmq.hh  servertcp.hh
